--- a/book-platform/package.json
+++ b/book-platform/package.json
@@ -8,9 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "express": "^4.18.2",
+    "handy-svg": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0",
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
