--- a/book-platform/package.json
+++ b/book-platform/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-slick": "^0.29.0",
