--- a/book-platform/package.json
+++ b/book-platform/package.json
@@ -9,7 +9,10 @@
     "axios": "^1.2.1",
     "express": "^4.18.2",
     "handy-svg": "^1.0.8",
+    "magic.css": "^1.4.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
